crates/daemon/tests/snapshots/cli_help__cli_help_rules_validate.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Usage: mxr rules validate --when <CONDITION> --then <ACTION>

Options:
      --when <CONDITION>
      --then <ACTION>
  -h, --help              Print help
