crates/daemon/tests/snapshots/cli_help__cli_help_saved.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Manage saved searches

Usage: mxr saved [OPTIONS] [COMMAND]

Commands:
  list    List saved searches
  add     Add a saved search
  delete  Delete a saved search
  run     Run a saved search
  help    Print this message or the help of the given subcommand(s)

Options:
      --account <ACCOUNT>
      --format <FORMAT>    [possible values: table, json, jsonl, csv, ids]
  -h, --help               Print help
