crates/daemon/tests/snapshots/cli_help__cli_help_saved_add.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Add a saved search

Usage: mxr saved add [OPTIONS] <NAME> <QUERY>

Arguments:
  <NAME>
  <QUERY>

Options:
      --mode <MODE>  [possible values: lexical, hybrid, semantic]
  -h, --help         Print help
