crates/daemon/tests/snapshots/cli_help__cli_help_saved_delete.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Delete a saved search

Usage: mxr saved delete <NAME>

Arguments:
  <NAME>

Options:
  -h, --help  Print help
