crates/daemon/tests/snapshots/cli_help__cli_help_saved_list.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
List saved searches

Usage: mxr saved list

Options:
  -h, --help  Print help
