crates/daemon/tests/snapshots/cli_help__cli_help_saved_run.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Run a saved search

Usage: mxr saved run <NAME>

Arguments:
  <NAME>

Options:
  -h, --help  Print help
