crates/daemon/tests/snapshots/cli_help__cli_help_screener.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Triage unknown senders: classify them as allow / deny / feed / paper-trail. Local-only consent metadata; never roundtrips to the provider

Usage: mxr screener [OPTIONS] [COMMAND]

Commands:
  queue        Show senders waiting for a decision (default if no subcommand)
  list         List all existing decisions
  allow        Allow this sender into the inbox
  deny         Auto-trash and mark-read this sender's mail on ingest
  feed         Put this sender in Reading (kept off the desk)
  paper-trail  Put this sender in Paper trail (kept off the desk)
  clear        Clear an existing decision
  help         Print this message or the help of the given subcommand(s)

Options:
      --account <ACCOUNT>  Restrict to a specific account
      --format <FORMAT>    [possible values: table, json, jsonl, csv, ids]
  -h, --help               Print help
