crates/daemon/tests/snapshots/cli_help__cli_help_screener_allow.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Allow this sender into the inbox

Usage: mxr screener allow [OPTIONS] <SENDER_EMAIL>

Arguments:
  <SENDER_EMAIL>

Options:
      --label <LABEL>  Optional provider label to apply on ingest
  -h, --help           Print help
