crates/daemon/tests/snapshots/cli_help__cli_help_screener_deny.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Auto-trash and mark-read this sender's mail on ingest

Usage: mxr screener deny [OPTIONS] <SENDER_EMAIL>

Arguments:
  <SENDER_EMAIL>

Options:
      --label <LABEL>
  -h, --help           Print help
